[gd_scene load_steps=3 format=2]

[ext_resource path="res://Contadores_crecimiento/Hidratacion.gd" type="Script" id=1]
[ext_resource path="res://SFX/Plant_growth.ogg" type="AudioStream" id=2]

[node name="Hidratacion" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0

[node name="Drying_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Drying_timer" to="." method="_on_Drying_timer_timeout"]
